--- a/tdlbook-main/rmd/09-implementation-and-numerical-experiments.rmd
+++ b/tdlbook-main/rmd/09-implementation-and-numerical-experiments.rmd
@@ -49,7 +49,7 @@ CCNN 将共链向量作为输入特征。对于形状分析任务，我们考虑
 knitr::include_graphics('figures/experiment.png', dpi=NA)
 ```
 
-请注意，为 COSEG 和人体数据集选择的架构具有相同数量和类型的构建模块； compare Figures \@ref(fig:mesh-net)(a) and (b). We use a random 85%-15% train-test split. For both of these architectures, a softmax activation is applied to the output tensor. All our segmentation models are trained for 600 epochs using a learning rate of 0.0001 and the standard cross-entropy loss. These results are consistent across Human Body and Shape COSEG datasets.
+请注意，为 COSEG 和人体数据集选择的架构具有相同数量和类型的构建模块；比较图 \@ref(fig:mesh-net)(a) 和 (b). 实验采用 85%-15% 的随机训练-测试比例。对于这两种架构，输出张量都采用了软最大激活（softmax activation），使用 0.0001 的学习率和标准交叉熵损失对所有分割模型进行了 600 次训练，在人体和形状 COSEG 数据集上都采用这些设置。
 
 We test the proposed CCNNs on mesh segmentation using the Human Body [@maron2017convolutional] and the Shape COSEG (vase, chair, and alien) [@wang2012active] datasets. For each mesh in these datasets, the utilized CC structure is the one induced by the triangulation of the meshes, although other variations in the CC structure yield comparable results. Further, three $k$-cochains are constructed for $0\leq k \leq 2$ and are utilized in CCNN training. As shown in Table \@ref(tab:shape-xp), CCNNs outperform three neural networks tailored to mesh analysis (HodgeNet [@smirnov2021hodgenet], PD-MeshNet [@milano2020primal] and MeshCCN [@hanocka2019meshcnn]) on two out of four datasets, and are among the best two neural networks on all four datasets.
 
