--- a/tdlbook-main/rmd/09-implementation-and-numerical-experiments.rmd
+++ b/tdlbook-main/rmd/09-implementation-and-numerical-experiments.rmd
@@ -53,18 +53,15 @@ knitr::include_graphics('figures/experiment.png', dpi=NA)
 
 我们使用Human Body [@maron2017convolutional] 和 Shape COSEG（花瓶、椅子和外星人）[@wang2012active] 数据集对所提出的 CCNN 进行了网格分割测试。对于这些数据集中的每个网格，所使用的 CC 结构是由网格的三角剖分建立的，尽管 CC 结构的其他变化也会产生类似的结果。此外，还为 $0\leq k \leq 2$  构建了三个 $k$-cochains，并在 CCNN 训练中使用。如表 \@ref(tab:shape-xp)所示，在四个数据集中的两个数据集上，CCNN 优于为网格分析量身定制的三个神经网络（HodgeNet [@smirnov2021hodgenet], PD-MeshNet [@milano2020primal] 和 MeshCCN [@hanocka2019meshcnn]），并且是所有四个数据集上最好的两个神经网络之一。
 
-
-
-
 ```{r shape-xp, echo=FALSE}
-methods <- c('HodgeNet', 'PD-MeshNet', 'MeshCNN', 'CCNN')
+方法 <- c('HodgeNet', 'PD-MeshNet', 'MeshCNN', 'CCNN')
 hb <- c('85.03', '85.61', '85.39', '87.30')
 cosegv <- c('90.30', '95.36', '92.36', '93.40')
 cosegc <- c('95.68', '97.23', '92.99', '98.30')
 cosega <- c('96.03', '98.18', '96.26', '93.70')
 domains <- data.frame(methods, hb, cosegv, cosegc, cosega)
 colnames(domains) <- c('Method', 'Human Body', 'COSEG vase', 'COSEG chair', 'COSEG alien')
-knitr::kable(domains, align=c('l', 'c', 'c', 'c', 'c'), booktabs=TRUE, caption="Predictive accuracy on test sets related to shape analysis, namely on Human Body and COSEG (vase, chair, alien) datasets. The results reported here are based on the $\\mbox{CCNN}_{COSEG}$ and $\\mbox{CCNN}_{HB}$ architectures. In particular, the result for $\\mbox{CCNN}_{HB}$ is reported in the first column, whereas the results for $\\mbox{CCNN}_{COSEG}$ are reported in the second, third and forth columns.")
+knitr::kable(domains, align=c('l', 'c', 'c', 'c', 'c'), booktabs=TRUE, caption="与形状分析相关的测试集，即Human Body和 COSEG（花瓶、椅子、外星人）数据集的预测准确率。本文报告的结果基于  $\\mbox{CCNN}_{COSEG}$ 和$\\mbox{CCNN}_{HB}$  架构。其中，第一列报告的是 $\\mbox{CCNN}_{HB}$ 的结果，而第二、第三和第四列报告的是 $\\mbox{CCNN}_{COSEG}$的结果。")
 ```
 
 **Architecture of $\mbox{CCNN}_{COSEG}$ and  $\mbox{CCNN}_{HB}$**. In $\mbox{CCNN}_{COSEG}$, as shown in Figure \@ref(fig:mesh-net)(a), we choose a CCNN pooling architecture as given in Definition \@ref(def:general-pooling-hoan), which pushes signals from vertices, edges and faces, and aggregates their information towards the final face prediction class. We choose $\mbox{CCNN}_{HB}$ similarly, except that the predicted signal is an edge class. The reason for this choice is that the Human Body dataset [@atzmon2018point] encodes the segmentation information on edges.
